***********************************
CHANGES IN VERSION 2.8.1

NEW FEATURES

SIGNIFICANT USER-VISIBLE CHANGES

   o The -s build_contact_maps option now  directly creates matrix files from .allValidPairs file. It does not merge the .validPairs anymore. Please use -s merge_persample to merge .validPairs files and remove duplicates.

   o Update manual and correct errors

BUG FIXES

***********************************
CHANGES IN VERSION 2.8.0

NEW FEATURES

   o Return bias vector after IC normalization

   o New utils hicpro2fithic.py to convert HiC-Pro output into fitHiC input

SIGNIFICANT USER-VISIBLE CHANGES

   o Update iced version (-> 0.4.0). This version includes a major changes on matrix filtering before iced normalization

   o sparseToDense.py utils. Create output file in the current folder by default
   
BUG FIXES

   o Fix bug in the help message of digest_genome.py

***********************************
CHANGES IN VERSION 2.7.9

NEW FEATURES

   o Update for capture Hi-C. New variable CAPTURE_TARGET allowing to restrict the analysis to the captured region(s)

SIGNIFICANT USER-VISIBLE CHANGES

   o Update iced version (-> 0.3.0)

   o Exit with an error if the restriction fragment file is set but not found. In the previous version, HiC-Pro automatically switched to DNAse mode.

   o Optimisation of python scripts

BUG FIXES


***********************************
CHANGES IN VERSION 2.7.8

NEW FEATURES

   o Religation are now discarded and considered as invalid pairs. Religation are defined as FR read pairs involving contiguous restriction fragments

SIGNIFICANT USER-VISIBLE CHANGES

   o Installation process has been changed ! Please read the manual !

   o Update of sparseTodense utils. It now provides a ---perchr option to generate intrachromosomal dense contact maps

   o Clean hicpro2juicebox.sh utils

BUG FIXES

   o Update script allowing to check the python version

   o Bug fix in R code in case of NA values


***********************************