@@ -5,11 +5,15 @@ NEW FEATURES
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
+   o samtools >1.0 is now required
+
    o The -s build_contact_maps option now  directly creates matrix files from .allValidPairs file. It does not merge the .validPairs anymore. Please use -s merge_persample to merge .validPairs files and remove duplicates.
 
    o Update manual and correct errors
 
 BUG FIXES
+
+   o Fix some issue with sort -T. This option is no longer used and replaced by setting the TMPDIR variable
 
 ***********************************
 CHANGES IN VERSION 2.8.0
